# ha_uiot_home

./: LICENSE  README.md  README_zh.md  hacs.json  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  release.yml
custom_components/uiot_home/: __init__.py  climate.py  config_flow.py  cover.py  fan.py  light.py  manifest.json  media_player.py  scene.py  sensor.py  switch.py  water_heater.py
custom_components/uiot_home/devices/: fresh_air.py  smart_ac.py
custom_components/uiot_home/translations/: zh-Hans.json
custom_components/uiot_home/uiot_api/: __init__.py  const.py  http_api.py  uiot_config.py  uiot_device.py  uiot_host.py  uiot_mqtt.py  util.py
