[project]
version = "1.0.0"
name = "uiot_home"
authors = [{ name = "uiot" }]
description = "uiot_home integration for Homeassistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["http", "mqtt"]
[project.urls]
Homepage = "https://github.com/uiotlink/ha_uiot_home"
Issues = "https://github.com/uiotlink/ha_uiot_home/issues"

[dependency-groups]
dev = [
    "colorlog",
    "homeassistant==2025.3.3",
    "pytest-homeassistant-custom-component",
    "voluptuous-stubs==0.1.1",
    "ruff>=0.9",
]
